structmeta-tests/tests/compile_fail/parse/mismatch_delimiter_tuple.rs
use structmeta::Parse;
use syn::LitStr;
#[derive(Parse)]
struct TestType(#[to_tokens("(")] syn::token::Bracket, LitStr);

fn main() {}
